# typedcsv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  typedcsv.py
tests/: test_typedcsv.py
typedcsv/: __init__.py
