[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typedcsv"
version = "0.1.0"
description = "Typed CSVs via header-embedded types and validators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Tiago Tresoldi"}
]
urls = {"Homepage" = "https://github.com/tresoldi/typedcsv"}

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools]
packages = ["typedcsv"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["test_typedcsv", "tests.test_typedcsv"]
disallow_untyped_defs = false
